tests/miniJava/neg/002775_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = public int [ 0 ] ; } }
